Add more results

--- a/data-understanding.ipynb
+++ b/data-understanding.ipynb
@@ -682,7 +682,9 @@
     "\n",
     "Some values in the `content` column appear more than once. There are **same** tweets for some of the `tweet_id`s.\n",
     "\n",
-    "There seems to be no missing values at all. I'll investigate further for missing values and wrong entries."
+    "There seems to be no missing values at all. I'll investigate further for missing values and wrong entries. \n",
+    "\n",
+    "Data seems to be noisy."
    ]
   }
  ],
