Add steps to deal with punctuation

--- a/data-preprocessing.ipynb
+++ b/data-preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,12 +197,21 @@
     "df['char_count'] = df['content'].apply(len)\n",
     "\n",
     "# Create a new column \"has_link\"\n",
-    "df['has_link'] = df.content.str.contains(\"http\")*1"
+    "df['has_link'] = df.content.str.contains(\"http\")*1\n",
+    "\n",
+    "# Create a new column \"ex_point\"\n",
+    "df['ex_point'] = df.content.str.contains(\"!\")*1\n",
+    "\n",
+    "# Create a new column \"qu_mark\"\n",
+    "df['qu_mark'] = df.content.str.contains(\"\\?\")*1\n",
+    "\n",
+    "# Create a new column \"multi_period\"\n",
+    "df['multi_period'] = df.content.str.contains(\"\\.\\.+\")*1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(38619, 8)"
+       "(38619, 11)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -294,6 +303,9 @@
        "      <th>hashtag_count</th>\n",
        "      <th>char_count</th>\n",
        "      <th>has_link</th>\n",
+       "      <th>ex_point</th>\n",
+       "      <th>qu_mark</th>\n",
+       "      <th>multi_period</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -301,12 +313,15 @@
        "      <th>1</th>\n",
        "      <td>sadness</td>\n",
        "      <td>wannamama</td>\n",
-       "      <td>layin n bed with a headache ughhhh...waitin on your call...</td>\n",
+       "      <td>layin n bed with a headache ughhhh...waitin on...</td>\n",
        "      <td>negative</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>59</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -318,6 +333,9 @@
        "      <td>0</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -329,27 +347,36 @@
        "      <td>0</td>\n",
        "      <td>36</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>neutral</td>\n",
        "      <td>xkilljoyx</td>\n",
-       "      <td>@user we want to trade with someone who has houston tickets, but no one will.</td>\n",
+       "      <td>@user we want to trade with someone who has ho...</td>\n",
        "      <td>neutral</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>worry</td>\n",
        "      <td>xxxPEACHESxxx</td>\n",
-       "      <td>re-pinging @user why didn't you go to prom? bc my bf didn't like my friends</td>\n",
+       "      <td>re-pinging @user why didn't you go to prom? bc...</td>\n",
        "      <td>negative</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -364,22 +391,22 @@
        "4     neutral      xkilljoyx   \n",
        "5       worry  xxxPEACHESxxx   \n",
        "\n",
-       "                                                                         content  \\\n",
-       "1                    layin n bed with a headache ughhhh...waitin on your call...   \n",
-       "2                                            funeral ceremony...gloomy friday...   \n",
-       "3                                           wants to hang out with friends soon!   \n",
-       "4  @user we want to trade with someone who has houston tickets, but no one will.   \n",
-       "5    re-pinging @user why didn't you go to prom? bc my bf didn't like my friends   \n",
+       "                                             content  polarity  mention_count  \\\n",
+       "1  layin n bed with a headache ughhhh...waitin on...  negative              0   \n",
+       "2                funeral ceremony...gloomy friday...  negative              0   \n",
+       "3               wants to hang out with friends soon!  positive              0   \n",
+       "4  @user we want to trade with someone who has ho...   neutral              1   \n",
+       "5  re-pinging @user why didn't you go to prom? bc...  negative              1   \n",
        "\n",
-       "   polarity  mention_count  hashtag_count  char_count  has_link  \n",
-       "1  negative              0              0          59         0  \n",
-       "2  negative              0              0          35         0  \n",
-       "3  positive              0              0          36         0  \n",
-       "4   neutral              1              0          77         0  \n",
-       "5  negative              1              0          75         0  "
+       "   hashtag_count  char_count  has_link  ex_point  qu_mark  multi_period  \n",
+       "1              0          59         0         0        0             1  \n",
+       "2              0          35         0         0        0             1  \n",
+       "3              0          36         0         1        0             0  \n",
+       "4              0          77         0         0        0             0  \n",
+       "5              0          75         0         0        1             0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,19 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_pickle(\"data/emotions_preprocessed.pkl\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
